# xor-cipher-core

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  changelogging.toml  pyproject.toml
.github/workflows/: release.yml
src/: lib.rs
xor_cipher/: core.pyi
xor_cipher_core/: __init__.py
