[package]
name = "xor-cipher-core"
version = "1.1.0"
authors = ["nekitdev", "RealistikDash"]
edition = "2021"
description = "Simple, reusable and optimized XOR ciphers in Python (core)."
documentation = "https://docs.xor-cipher.org/"
readme = "README.md"
homepage = "https://xor-cipher.org/"
repository = "https://github.com/xor-cipher/xor-cipher-core"
license = "MIT"
keywords = ["xor", "cipher", "core"]
publish = false

[lib]
name = "_xor_cipher_core"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.22.0"
features = ["extension-module", "generate-import-lib"]

[dependencies.xor-cipher]
version = "1.1.0"
