[package]
name = "xor-cipher-core"
version = "1.1.2"
authors = ["nekitdev", "RealistikDash"]
edition = "2021"
description = "Simple, reusable and optimized XOR ciphers in Python (core)."
readme = "README.md"
documentation = "https://xor-cipher.github.io/xor-cipher"
repository = "https://github.com/xor-cipher/xor-cipher-core"
license = "MIT"
keywords = ["xor", "cipher", "core"]
publish = false

[lib]
name = "_xor_cipher_core"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.23.3"
features = ["extension-module", "generate-import-lib"]

[dependencies.xor-cipher]
version = "4.0.0"
